feat: Add mobile app development on feature/mobile-app branch
- Enable expo-image-editor tracking on mobile development branch
- Keep mobile app excluded from main branch to prevent build conflicts
- This allows parallel development of web and mobile applications
- Mobile app includes full feature parity with web version
- Supports iOS and Android with native camera/gallery integration

--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,4 @@ yarn-error.log*
 next-env.d.ts
 
 # expo mobile app - exclude from Next.js build
-/expo-image-editor
+# /expo-image-editor  # Commented out on mobile branch for development
